# pyproject.toml
[project]
name = "tallem"
repository = "https://github.com/peekxc/tallem"

[build-system]
requires = ["setuptools>=42", "build", "wheel", "poetry>=1.0.10", "meson>=0.59.0", "ninja", "cmake", "Cython", "numpy", "scipy>=1.6"]
build-backend = "poetry.masonry.api" # build backends for pip to use to building the wheel
# requires = ["mesonpep517", "build", "wheel", "meson>=0.59.0", "ninja", "cmake", "Cython", "numpy", "scipy>=1.6"]
# build-backend = "mesonpep517.buildapi"

# [tool.mesonpep517.metadata]
# platforms = "any"
# summary = "Topological Assembly of Locally Euclidean Model"
# author = "Matt Piekenbrock"
# author-email = "matt.piekenbrock@gmail.com"
# # authors = ["Matt Piekenbrock <matt.piekenbrock@gmail.com>"]
# # authors = [
# # 	name = "Matt Piekenbrock",
# # 	email = "matt.piekenbrock@gmail.com"
# # ]
# # description = "Topological Assembly of Locally Euclidean Models"
# description-file = "README.md"
# # license = "Apache-2.0"
# # readme = "README.md"
# classifiers = [
# 	"Development Status :: 3 - Alpha", 
# 	"License :: OSI Approved :: Apache Software License", 
# 	"Operating System :: OS Independent",
# 	"Programming Language :: Python :: 3",
# 	"Intended Audience :: Science/Research"
# ]
# requires-python = ">=3.8,<3.10"
# requires = [
#   "scipy >= 1.6", 
# 	"numpy >= 1.20"
# ]
# version = "0.2.0"


# [tool.mesonpep517.entry-points]
# console_scripts = [
#   'build = build:build'
# ]



[tool.poetry]
name = "tallem"
version = "0.2.0"
description = "Topological Assembly of Locally Euclidean Models"
license = "Apache-2.0"
authors = ["Matt Piekenbrock <matt.piekenbrock@gmail.com>"]
readme = "README.md"
repository = "https://github.com/peekxc/tallem"
classifiers = [
	"Development Status :: 3 - Alpha", 
	"License :: OSI Approved :: Apache Software License", 
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Intended Audience :: Science/Research"
]
build = "build.py"
packages = [
	{ include = "tallem", from = "src" }, # from = "src/tallem" 
]
include = [
	{ path = "src/**/*.so", format = "wheel" },
	{ path = "src/**/*.pyd", format = "wheel" },
	"README.md"
] # TODO: configure this to add/remove things


[tool.poetry.dependencies]
python = ">=3.8,<3.10"
scipy = ">=1.6"
numpy = "^1.21.3"
autograd = {version = ">=.3", optional = true}
pymanopt = {version = ">=0.2.5", optional = true}
scikit-learn = {version = ">=1.0", optional = true}

# Need to keep build-time dependencies as dev-dependencies 
# for now, see: https://github.com/python-poetry/poetry/issues/2789
[tool.poetry.dev-dependencies]
Cython = "^0.29.24"
meson = "^0.60.0"
ninja = "^1.10.2"
cmake = "^3.21.4"
numpy = "^1.21.3"
scipy = ">=1.6"
pytest = ">=3.4"

## Original requirements manually compiled from the list generated by " pipdeptree | grep -e '^\S' " specified in the src/tallem directory 
[tool.poetry.extras]
autograd = ["autograd"]
pymanopt = ["pymanopt"]
scikit-learn = ["scikit-learn"]

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest {project}/tests"
archs = "x86_64" 
build = "cp38-manylinux_x86_64" #"cp36-win32" "cp36-manylinux* cp38-macosx_x86_64"
build-frontend = "pip"
build-verbosity = 1

[tool.cibuildwheel.linux]
archs = ["auto64"] # "aarch64"
before-all = [
	"sudo add-apt-repository universe",
	"sudo apt-get update",
	"sudo apt-get install python3 python3-pip python3-setuptools python3-wheel ninja-build",
	"sudo apt update -yq",
	"sudo apt install -yq --no-install-recommends ninja-build gfortran liblapack-dev liblapacke-dev",
	"sudo apt-get install libarmadillo-dev",
	"sudo ldconfig"
]

