[tool.poetry]
name = "test_numba"
version = "0.1.0"
description = ""
authors = ["peekxc <matt.piekenbrock@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
llvmlite = "0.37.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
